--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="selenium-server-4.7.0.jar"/>
+	<classpathentry kind="lib" path="commons-io-2.11.0 (1).jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
