--- a/testdata/data.properties
+++ b/testdata/data.properties
@@ -1,5 +1,10 @@
-url=https://demo.actitime.com/login.do
+#Updated properties file Successfully
+#Sat Jan 14 11:34:09 IST 2023
+password=manager
 browser=chrome
 time=10
+url=https\://demo.actitime.com/login.do
+key=value
 username=admin
-password=manager
+url1=https://www.facebook.com/
+url2=https://www.facebook.com/
