--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,20 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="selenium-server-4.7.0.jar"/>
 	<classpathentry kind="lib" path="commons-io-2.11.0 (1).jar"/>
+	<classpathentry kind="lib" path="poi/commons-codec-1.15 (1).jar"/>
+	<classpathentry kind="lib" path="poi/commons-collections4-4.4 (1).jar"/>
+	<classpathentry kind="lib" path="poi/commons-compress-1.20 (1).jar"/>
+	<classpathentry kind="lib" path="poi/commons-math3-3.6.1 (1).jar"/>
+	<classpathentry kind="lib" path="poi/curvesapi-1.06 (1).jar"/>
+	<classpathentry kind="lib" path="poi/poi-5.0.0 (1).jar"/>
+	<classpathentry kind="lib" path="poi/poi-examples-5.0.0 (1).jar"/>
+	<classpathentry kind="lib" path="poi/poi-excelant-5.0.0 (1).jar"/>
+	<classpathentry kind="lib" path="poi/poi-integration-5.0.0 (1).jar"/>
+	<classpathentry kind="lib" path="poi/poi-ooxml-5.0.0 (1).jar"/>
+	<classpathentry kind="lib" path="poi/poi-ooxml-full-5.0.0 (1).jar"/>
+	<classpathentry kind="lib" path="poi/poi-ooxml-lite-5.0.0.jar"/>
+	<classpathentry kind="lib" path="poi/poi-scratchpad-5.0.0 (1).jar"/>
+	<classpathentry kind="lib" path="poi/SparseBitSet-1.2 (1).jar"/>
+	<classpathentry kind="lib" path="poi/xmlbeans-4.0.0 (1).jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
